--- a/css/style.css
+++ b/css/style.css
@@ -811,3 +811,334 @@ fieldset {
   width: 50px;
   height: 50px;
 }
+
+.company {
+  margin-top: 150px;
+}
+.company__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 80px;
+}
+.company__text {
+  width: 50%;
+}
+.company__title {
+  margin-top: 50px;
+  color: #201E1E;
+  font-size: 38px;
+  font-weight: 600;
+  line-height: 120%;
+  letter-spacing: -0.38px;
+}
+.company__descr {
+  margin-top: 50px;
+  color: #201E1E;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 130%;
+}
+.company__descr p {
+  margin-top: 15px;
+}
+.company__slider-wrap {
+  width: 50%;
+}
+.company__button {
+  margin-top: 40px;
+  width: 305px;
+}
+.company__slide > img {
+  width: 100%;
+  height: 450px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.company__slide-block {
+  margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.company__slide-text {
+  color: #201E1E;
+  font-size: 20px;
+  line-height: 130%;
+}
+.company__slide-city {
+  color: rgba(53, 53, 53, 0.5);
+  font-size: 20px;
+  line-height: 130%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 5px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.company__slide-city::before {
+  content: url("../img/company-marker.png");
+  height: 20px;
+}
+.company__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+}
+.company-next {
+  height: 50px;
+  width: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: 1px solid #004F3D;
+  background: #FFF;
+}
+.company-prev {
+  height: 50px;
+  width: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: 1px solid #004F3D;
+  background: #FFF;
+}
+.company__pagination {
+  position: static;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.company__pagination .swiper-pagination-bullet-active {
+  width: 50px;
+  background: #004F3D;
+  border-radius: unset;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.company__pagination .swiper-pagination-bullet {
+  background: #004F3D;
+  border-radius: unset;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.company__slider-controls {
+  margin-top: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.trust {
+  margin-top: 180px;
+}
+.trust__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.trust__text {
+  width: 50%;
+  color: #000;
+  leading-trim: both;
+  text-edge: cap;
+  font-size: 38px;
+  font-weight: 600;
+  line-height: 120%;
+  letter-spacing: -0.38px;
+}
+.trust__items {
+  margin-top: 50px;
+  gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+.trust__item img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.trust__button {
+  margin: 0 auto;
+  margin-top: 50px;
+  width: 250px;
+}
+
+.advantages {
+  margin-top: 180px;
+}
+.advantages__wrapper {
+  margin-top: 50px;
+}
+.advantages__title {
+  color: #201E1E;
+  font-size: 38px;
+  font-weight: 600;
+  width: 580px;
+  line-height: 120%;
+  letter-spacing: -0.38px;
+}
+.advantages__items {
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 35px;
+}
+.advantages__item-title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  gap: 20px;
+  color: var(--black, #201E1E);
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 110%;
+}
+.advantages__text {
+  margin-top: 30px;
+  color: var(--second_grey, rgba(53, 53, 53, 0.5));
+  font-size: 20px;
+  line-height: 130%;
+}
+.advantages__button {
+  width: 300px;
+  margin: 0 auto;
+  margin-top: 75px;
+  text-align: center;
+}
+
+.consultation {
+  margin-top: 180px;
+  background: url("../img/consultation-bg.png") center/cover no-repeat;
+}
+.consultation__wrapper {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 80px 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.consultation__title {
+  color: #FFF;
+  font-size: 38px;
+  font-weight: 600;
+  line-height: 120%;
+  letter-spacing: -0.38px;
+}
+.consultation__descr {
+  color: #FFF;
+  margin-top: 20px;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 130%;
+}
+.consultation__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 20px;
+  height: 65px;
+}
+.consultation__form input {
+  background: #DADADA;
+  width: 100%;
+  height: 100%;
+  max-width: 400px;
+  outline: none;
+  border: none;
+  padding-left: 20px;
+}
+.consultation__form input::-webkit-input-placeholder {
+  color: rgba(53, 53, 53, 0.5);
+  font-size: 20px;
+  line-height: 130%;
+}
+.consultation__form input::-moz-placeholder {
+  color: rgba(53, 53, 53, 0.5);
+  font-size: 20px;
+  line-height: 130%;
+}
+.consultation__form input:-ms-input-placeholder {
+  color: rgba(53, 53, 53, 0.5);
+  font-size: 20px;
+  line-height: 130%;
+}
+.consultation__form input::-ms-input-placeholder {
+  color: rgba(53, 53, 53, 0.5);
+  font-size: 20px;
+  line-height: 130%;
+}
+.consultation__form input::placeholder {
+  color: rgba(53, 53, 53, 0.5);
+  font-size: 20px;
+  line-height: 130%;
+}
+.consultation__button {
+  width: 210px;
+  height: 100%;
+}
+
+.news {
+  margin-top: 180px;
+  position: relative;
+}
+.news__wrapper {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+.news__bg {
+  position: absolute;
+  z-index: -1;
+  top: -180px;
+  left: 0;
+  width: 100%;
+}
+.news__text {
+  color: #000;
+  width: 400px;
+  margin-top: 50px;
+  font-size: 38px;
+  font-weight: 600;
+  line-height: 120%;
+  letter-spacing: -0.38px;
+}
+.news__button {
+  margin-top: 45px;
+  width: 250px;
+}
