--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,7 @@
 html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -311,6 +312,10 @@ fieldset {
   transition: all 0.3s;
   border: 1px solid transparent;
 }
+.button-white:hover img {
+  -webkit-filter: grayscale(1) brightness(5);
+          filter: grayscale(1) brightness(5);
+}
 
 .title {
   display: -webkit-box;
@@ -329,6 +334,19 @@ fieldset {
   font-size: 24px;
   font-weight: 600;
   line-height: 110%;
+}
+
+.up-button {
+  position: fixed;
+  left: 90%;
+  z-index: 10;
+  bottom: 10%;
+  cursor: pointer;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
 }
 
 .header {
@@ -1141,4 +1159,210 @@ fieldset {
 .news__button {
   margin-top: 45px;
   width: 250px;
+}
+.news__items {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+.news__item:hover .news__item-button {
+  opacity: 1;
+  visibility: visible;
+}
+.news__item-image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.news__item-title {
+  color: #201E1E;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 110%;
+}
+.news__item-block {
+  margin-top: 20px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.news__item-date {
+  margin-top: 10px;
+  color: rgba(53, 53, 53, 0.5);
+  font-size: 20px;
+  line-height: 130%;
+}
+.news__item-button {
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  height: 50px;
+  width: 50px;
+}
+
+.contacts {
+  margin-top: 180px;
+}
+.contacts__wrapper {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding-left: 12.5vw;
+}
+.contacts__title {
+  margin-top: 50px;
+  color: #201E1E;
+  font-size: 38px;
+  font-weight: 600;
+  line-height: 120%;
+  letter-spacing: -0.38px;
+  width: 500px;
+}
+.contacts__items {
+  margin-top: 60px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 40px 80px;
+}
+.contacts__item a {
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.contacts__item a:hover {
+  color: #004F3D;
+}
+.contacts__item-title {
+  color: rgba(53, 53, 53, 0.5);
+  font-size: 20px;
+  line-height: 130%;
+}
+.contacts__item-text {
+  margin-top: 20px;
+  display: block;
+  color: #201E1E;
+  font-size: 20px;
+  line-height: 130%;
+}
+.contacts__socials {
+  margin-top: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+}
+.contacts__button {
+  margin-top: 50px;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  padding: 20px 45px;
+}
+.contacts__map {
+  height: 100%;
+}
+.contacts__map iframe {
+  height: 100%;
+}
+
+.footer {
+  margin-top: 180px;
+  padding: 50px 0 0 0;
+  background: url("../img/footer-bg.png") center/cover no-repeat;
+}
+.footer__top {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 60px;
+}
+.footer__logo-text {
+  margin-top: 20px;
+  color: #FFF;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 130%;
+}
+.footer__list {
+  display: grid;
+  gap: 25px;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+}
+.footer__list li:first-child a {
+  font-weight: 600;
+}
+.footer__list a {
+  color: #FFF;
+  font-size: 20px;
+  line-height: 130%;
+  font-weight: 300;
+}
+.footer__info {
+  color: white;
+}
+.footer__info p {
+  color: #DADADA;
+  font-size: 20px;
+  line-height: 130%;
+}
+.footer__socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 20px;
+  gap: 15px;
+}
+.footer__socials img {
+  -webkit-filter: grayscale(1) brightness(5);
+          filter: grayscale(1) brightness(5);
+}
+.footer__info-text {
+  color: #FFF;
+  margin-top: 20px;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 130%;
+}
+.footer hr {
+  margin-top: 50px;
+  border: 0.5px solid #C1C1C1;
+  border-bottom: none;
+}
+.footer__bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 32px 0 22px 0;
+  color: #DADADA;
+  font-size: 20px;
+  font-weight: 600;
+  position: relative;
+}
+.footer__brevis {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: rgba(255, 255, 255, 0.4);
+}
+.footer__brevis a {
+  color: rgba(255, 255, 255, 0.4);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.4);
+  padding-bottom: 3px;
 }
