--- a/scss/style.scss
+++ b/scss/style.scss
@@ -216,7 +216,8 @@
 
 html {
     line-height: 1.15;
-    -webkit-text-size-adjust: 100%
+    -webkit-text-size-adjust: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -386,6 +387,10 @@ fieldset {
     color: white;
     transition: all .3s;
     border: 1px solid transparent;
+
+    img {
+        filter: grayscale(1) brightness(5);
+    }
 }
 
 .title {
@@ -405,6 +410,16 @@ fieldset {
         font-weight: 600;
         line-height: 110%;
     }
+}
+
+.up-button {
+    position: fixed;
+    left: 90%;
+    z-index: 10;
+    bottom: 10%;
+    cursor: pointer;
+    transition: all .3s;
+    height: max-content;
 }
 
 
@@ -1188,17 +1203,242 @@ fieldset {
         width: 250px;
     }
 
-    &__items {}
+    &__items {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+    }
 
-    &__item {}
+    &__item {
+        &:hover {
+            .news__item-button {
+                opacity: 1;
+                visibility: visible;
+            }
+        }
+    }
 
-    &__item-image {}
+    &__item-image {
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
 
-    &__item-title {}
+    &__item-title {
+        color: #201E1E;
+        font-size: 24px;
+        font-weight: 600;
+        line-height: 110%;
+    }
 
-    &__item-block {}
+    &__item-block {
+        margin-top: 20px;
+        align-items: center;
+        display: flex;
+        justify-content: space-between;
+    }
 
-    &__item-date {}
+    &__item-date {
+        margin-top: 10px;
+        color: rgba(53, 53, 53, 0.50);
+        font-size: 20px;
+        line-height: 130%;
+    }
 
-    &__item-button {}
+    &__item-button {
+        opacity: 0;
+        visibility: hidden;
+        transition: all .3s;
+        height: 50px;
+        width: 50px;
+    }
+}
+
+.contacts {
+
+    margin-top: 180px;
+
+    &__wrapper {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        padding-left: 12.5vw;
+    }
+
+    &__info {}
+
+    &__title {
+        margin-top: 50px;
+        color: #201E1E;
+        font-size: 38px;
+        font-weight: 600;
+        line-height: 120%;
+        letter-spacing: -0.38px;
+        width: 500px;
+    }
+
+    &__items {
+        margin-top: 60px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 40px 80px;
+    }
+
+    &__item {
+        a {
+            transition: all .3s;
+
+            &:hover {
+                color: #004F3D;
+            }
+        }
+    }
+
+    &__item-title {
+        color: rgba(53, 53, 53, 0.50);
+        font-size: 20px;
+        line-height: 130%;
+    }
+
+    &__item-text {
+
+
+        margin-top: 20px;
+        display: block;
+        color: #201E1E;
+        font-size: 20px;
+        line-height: 130%;
+    }
+
+    &__socials {
+        margin-top: 50px;
+        display: flex;
+        gap: 10px;
+    }
+
+    &__social {}
+
+    &__button {
+        margin-top: 50px;
+        width: max-content;
+        padding: 20px 45px;
+    }
+
+    &__map {
+        height: 100%;
+
+        iframe {
+            height: 100%;
+        }
+    }
+}
+
+.footer {
+    margin-top: 180px;
+    padding: 50px 0 0 0;
+    background: url('../img/footer-bg.png') center / cover no-repeat;
+
+    &__top {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 60px;
+    }
+
+    &__logo {}
+
+    &__logo-image {}
+
+    &__logo-text {
+        margin-top: 20px;
+        color: #FFF;
+        font-size: 20px;
+        font-weight: 600;
+        line-height: 130%;
+    }
+
+    &__list {
+        display: grid;
+        gap: 25px;
+        height: max-content;
+
+        li {
+
+            &:first-child {
+                a {
+                    font-weight: 600;
+
+                }
+            }
+
+        }
+
+        a {
+            color: #FFF;
+            font-size: 20px;
+            line-height: 130%;
+            font-weight: 300;
+
+        }
+    }
+
+    &__info {
+        color: white;
+
+        p {
+            color: #DADADA;
+            font-size: 20px;
+            line-height: 130%;
+        }
+    }
+
+    &__socials {
+        display: flex;
+        margin-top: 20px;
+        gap: 15px;
+
+        img {
+            filter: grayscale(1) brightness(5);
+        }
+    }
+
+    &__info-text {
+        color: #FFF;
+        margin-top: 20px;
+        font-size: 20px;
+        font-weight: 600;
+        line-height: 130%;
+    }
+
+    hr {
+        margin-top: 50px;
+        border: 0.5px solid #C1C1C1;
+        border-bottom: none;
+    }
+
+    &__bottom {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 32px 0 22px 0;
+        color: #DADADA;
+        font-size: 20px;
+        font-weight: 600;
+        position: relative;
+
+
+    }
+
+    &__brevis {
+        display: flex;
+        gap: 10px;
+        align-items: center;
+        color: rgba(255, 255, 255, 0.4);
+
+        a {
+            color: rgba(255, 255, 255, 0.4);
+            border-bottom: 1px solid rgba(255, 255, 255, 0.4);
+            padding-bottom: 3px;
+        }
+    }
 }
